Recipe overflow fix

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -62,6 +62,7 @@ body {
 }
 
 .container {
+  width: 100%;
   max-width: 120rem;
   min-height: 117rem;
   margin: 4vw auto;
