--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -28,6 +28,7 @@
 
   &__img {
     width: 100%;
+    max-width: 100%;
     display: block;
     height: 100%;
     object-fit: cover;
